--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TGS2024_New.sln"
+    "dotnet.defaultSolution": "TGS2024.sln"
 }
